# extended-wdm

./: .gitignore  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: draft-pdf.yml  python-package.yml  python-publish.yml
data/: adcp_test_data.nc  displacement.csv  displacements.csv  donelan_run62.mat  donelan_run82.mat
docs/: conf.py  contribute.rst  ewdm.rst  examples.rst  gallery.rst  getting_started.rst  index.rst  main_copy.py  maths.rst  requirements.txt
docs/gallery/: README.rst  plot_adcp_data.py  plot_cdip.py  plot_comparison_of_methods.py  plot_example_arrays.py  plot_fourier_vs_wavelet.py  plot_numpy_as_input.py  plot_spotter.py  plot_stereo_video.py
ewdm/: __init__.py  density.py  fourier.py  helpers.py  main.py  parameters.py  plots.py  pyproject.toml  sources.py  wavelets.py
joss/: paper.bib  paper.md
notebooks/: cdip_example.ipynb  example.py
tests/: test_main.py  test_sources.py  test_wavelets.py
